--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "README.md"
   ],
   "dependencies": {
+    "prismjs": "^1.6.0",
     "shower-core": "^2.1.0",
     "shower-material": "^1.0.11",
     "shower-ribbon": "^2.0.10"
